--- a/frontend-absensi-gym/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/frontend-absensi-gym/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -19,7 +19,9 @@
           </select>
           <div *ngIf="selectedTrainingType">
           <small class="text-muted">
-            <small class="text-muted">{{ selectedTrainingDescription }}</small>
+            <small class="form-text mt-1 text-muted">
+              {{ selectedTrainingDescription }}
+            </small>
           </small>
         </div>
 
