--- a/frontend-absensi-gym/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/frontend-absensi-gym/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -5,6 +5,84 @@
     <button class="btn btn-outline-danger" (click)="LogOut()">Log Out</button>
   </div>
 
+  <!-- <div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/ProgresiveOverload.png"  class="d-block w-100" alt="overload">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Progresive Overload</h5>
+        <p>Naikkan beban perlahan setiap 1-2 minggu.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="assets/cardio.png" class="d-block w-100" alt="cardio">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Kardio setelah latihan beban</h5>
+        <p>Membakar lemak secara maksimal</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="assets/defisit.png" class="d-block w-100" alt="defisit">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Pola makan defisit kalori</h5>
+        <p>Kurangi kalori tapi tetap tinggi protein (ayam, ikan, tempe, tahu).</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div> -->
+<!-- <div id="tipsCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="card-carousel">
+        <img src="assets/ProgresiveOverload.png" class="card-img" alt="overload">
+        <div class="carousel-caption">
+          <h5>Progresive Overload</h5>
+          <p>Naikkan beban perlahan setiap 1-2 minggu.</p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card-carousel">
+        <img src="assets/cardio.png" class="card-img" alt="cardio">
+        <div class="carousel-caption">
+          <h5>Kardio setelah latihan beban</h5>
+          <p>Membakar lemak secara maksimal</p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card-carousel">
+        <img src="assets/defisit.png" class="card-img" alt="defisit">
+        <div class="carousel-caption">
+          <h5>Pola makan defisit kalori</h5>
+          <p>Kurangi kalori tapi tetap tinggi protein.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#tipsCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#tipsCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div> -->
+  <app-tips-carousel></app-tips-carousel>
+
+  <br>
   <!-- Form Absensi -->
   <div class="card mb-4">
     <div class="card-header">
