--- a/frontend-absensi-gym/src/styles.css
+++ b/frontend-absensi-gym/src/styles.css
@@ -8,8 +8,10 @@
 
 .foo {
   margin-top: auto;
-  background-image: url("/assets/background-cf.png");
-  background-repeat: no-repeat;
+  background-color: #111827;
+  color: white;
+  /* background-image: url("/assets/background-cf.png"); */
+  /* background-repeat: no-repeat; */
   font-weight: bold;
-  background-size: cover;
+  /* background-size: cover; */
 }
