--- a/frontend-absensi-gym/src/styles.css
+++ b/frontend-absensi-gym/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   font-family: 'Quicksand', sans-serif;
@@ -15,3 +18,6 @@
   font-weight: bold;
   /* background-size: cover; */
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
